# malaketh-layered

./: Cargo.toml  LICENSE  Makefile  README.md  compose-mala.yaml  compose.yaml
.github/: dependabot.yml
app/: Cargo.toml
app/src/: app.rs  app_config.rs  main.rs  node.rs  state.rs  store.rs  streaming.rs
app/src/store/: keys.rs
cli/: Cargo.toml
cli/src/: args.rs  logging.rs  new.rs
cli/src/cmd/: distributed_testnet.rs
engine/: Cargo.toml
engine/src/: auth.rs  engine.rs  engine_rpc.rs  ethereum_rpc.rs  json_structures.rs  lib.rs
nodes_config/0/config/: config.toml
nodes_config/1/config/: app_config.toml  config.toml
nodes_config/2/config/: app_config.toml  config.toml
scripts/: add_peers.sh  spawn.bash
types/: Cargo.toml
types/src/: address.rs
utils/: Cargo.toml
utils/src/: genesis.rs  main.rs  spammer.rs  tx.rs
